--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
-    
+<resources>
+
 
     <style name="Theme.FootballMatchViewer.SplashScreen" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/yellow</item>
@@ -9,5 +9,5 @@
         <item name="postSplashScreenTheme">@style/Theme.FootballMatchViewer</item>
     </style>
 
-    <style name="Theme.FootballMatchViewer" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.FootballMatchViewer" parent="Theme.AppCompat.DayNight.NoActionBar" />
 </resources>
