App launcher icon.

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="122.88"
+    android:viewportHeight="122.88">
+  <group android:scaleX="0.48"
+      android:scaleY="0.48"
+      android:translateX="31.9488"
+      android:translateY="31.9488">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M61.44,0c16.97,0 32.33,6.88 43.44,18c11.12,11.12 18,26.48 18,43.44c0,16.97 -6.88,32.33 -18,43.44c-11.12,11.12 -26.48,18 -43.44,18S29.11,116 18,104.88C6.88,93.77 0,78.41 0,61.44C0,44.47 6.88,29.11 18,18C29.11,6.88 44.47,0 61.44,0L61.44,0zM76.85,117.08L76.73,117l6.89,-23.09L69.41,78.15L52.66,78L39.38,94.62l6.66,22.32l-0.15,0.1c4.95,1.38 10.16,2.12 15.55,2.12C66.78,119.16 71.95,118.44 76.85,117.08L76.85,117.08zM12.22,91.61l24.34,0.12L49.28,75.8l-5.26,-16.12l-21.42,-9.3L3.78,64.08C4.23,74.14 7.26,83.53 12.22,91.61L12.22,91.61zM16.77,24.88l7.4,22.14l19.98,8.68l15.44,-11.97V20.94L40.51,7.63c-7.52,2.93 -14.28,7.39 -19.89,13C19.27,21.98 17.98,23.4 16.77,24.88L16.77,24.88zM81.7,7.37L63.3,20.77V43.7L77.8,54.91l20.81,-8.92l7.18,-21.49c-1.12,-1.35 -2.3,-2.64 -3.54,-3.88C96.48,14.85 89.49,10.29 81.7,7.37L81.7,7.37zM119.09,64.36l-0.02,0.01L99.09,49.82l-19.81,8.49l-6.08,18.03l13.73,15.23c0.06,0.06 0.09,0.13 0.11,0.21l23.6,-0.11C115.56,83.65 118.59,74.34 119.09,64.36L119.09,64.36z"
+        android:fillColor="#000000"
+        android:fillType="evenOdd"/>
+  </group>
 </vector>
